# gajae-code

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.dockerignore  Dockerfile.robogjc  Dockerfile.robogjc.dockerignore  HANDOFF.md  README.md  REPORT.md  biome.json  package.json
.github/: FUNDING.yml
crates/git-daemon/: Cargo.toml
crates/git-daemon/src/: config.rs  dispatcher.rs  escalation.rs  forge.rs  forge_adapter.rs  github_auth.rs  github_forge.rs  hindsight_client.rs  keys.rs  lib.rs  lifecycle.rs  main.rs  memory.rs  merge_gate.rs  observability.rs  orchestrator.rs  poll.rs  reqwest_transport.rs  rpc_framing.rs  rpc_runner.rs  rpc_socket.rs  runner.rs  scheduler.rs  secrets.rs  serve.rs  socket_runner.rs  spend_ledger.rs  state_machine.rs  store.rs  webhook.rs  webhook_handler.rs
crates/git-daemon/tests/: cli.rs  live_engine.rs  live_forge.rs  live_merge.rs  live_rpc.rs
crates/gjc-app-server/: Cargo.toml
crates/gjc-app-server/docs/: phase0-isolation-audit.md
crates/gjc-app-server/src/: backend.rs  discovery.rs  error.rs  event_map.rs  field_policy.rs  host_tools.rs  host_uris.rs  identity.rs  ids.rs  item_state.rs  jsonrpc.rs  lib.rs  notifications.rs  protocol.rs  scheduler.rs  schema.rs  server.rs  transport_ws.rs  unattended.rs  workflow_gate.rs
crates/gjc-app-server/tests/: conformance.rs
crates/gjc-desktop/: .gitignore  Cargo.toml  tauri.conf.json
crates/gjc-desktop/src/: discovery.rs  main.rs  sidecar.rs
crates/robogjc/: Cargo.toml
crates/robogjc/.gjc/robogjc/: app-server-thread.json
crates/robogjc/prompts/: dirty_state_reminder.md  system_append.md
crates/robogjc/src/: app_server_client.rs  autoclose.rs  cancellation.rs  cli.rs  config.rs  dashboard.rs  db.rs  fixture_harness.rs  git_ops.rs  github.rs  host_tools.rs  lib.rs  logging.rs  main.rs  manual_triage.rs  natives_cache.rs  persona.rs  pragmas.rs  proxy.rs  queue.rs  redaction.rs  sandbox.rs  server.rs  slot_pool.rs  tasks.rs  worker.rs  workspace_keys.rs
crates/robogjc/tests/: g004_proxy_redteam.rs  g009_server_redteam.rs  github_phase3.rs  parity.rs  phase4_sandbox_git.rs
crates/robogjc/tests/fixtures/: README.md
crates/robogjc/tests/fixtures/phase1/: hmac-vectors.json  redaction-vectors.json  regen.py  workspace-key-vectors.json
crates/robogjc/tests/fixtures/phase3/: issue-comment-directive.json  issues-opened.json  reviewer-bot-pr-comment.json  route-bot-suffix-comment.expected.json  route-bot-suffix-comment.payload.json  route-comment-association.expected.json  route-comment-association.payload.json  route-comment.expected.json  route-comment.payload.json  route-disallowed-repo.expected.json  route-disallowed-repo.payload.json  route-issue-opened.expected.json  route-issue-opened.payload.json  route-maintainer-list-directive.expected.json  route-maintainer-list-directive.payload.json  route-maintainer-pragmas.expected.json  route-maintainer-pragmas.payload.json  route-maintainer-without-mention.expected.json  route-maintainer-without-mention.payload.json  route-non-directive-no-pragmas.expected.json  route-non-directive-no-pragmas.payload.json  route-owner-directive.expected.json  route-owner-directive.payload.json  route-pr-closed-unmerged.expected.json  route-pr-closed-unmerged.payload.json  route-pr-conversation-directive.expected.json  route-pr-conversation-directive.payload.json  route-pr-conversation-fallback.expected.json  route-pr-conversation-fallback.payload.json  route-pr-conversation.expected.json  route-pr-conversation.payload.json  route-pr-merged-fallback.expected.json  route-pr-merged.expected.json  route-pr-merged.payload.json  route-random-bot-skipped.payload.json  route-random-mention-no-directive.payload.json  route-review-comment-directive.expected.json  route-review-comment-directive.payload.json  route-review-comment-fallback.expected.json  route-review-comment-fallback.payload.json  (+15 more)
crates/robogjc/tests/fixtures/phase4/: bad-fetch-output.txt
crates/robogjc/tests/fixtures/phase5/: audit-diff.fixture.json  host-tool-descriptors.snapshot.json  host-tool-names.snapshot.json
crates/robogjc/tests/fixtures/phase7/: PROVENANCE.md  host-tool.ndjson  interrupt.ndjson  resume.ndjson  start.ndjson  steer.ndjson  terminal-race.ndjson
docs/: ERRATA-GPT5-HARMONY.md  REBRANDING_PLAN_260525.md  ai-schema-normalize.md  app-server-provider-auth.md  app-server.md  aside-integration.md  auth-broker-gateway.md  bash-tool-runtime.md  bot-integration.md  bridge.md  codebase-overview.md  codegraph-custom-tool.md  compaction.md  environment-variables.md  external-control-readiness.md  full-native-candidate-map.json  full-native-candidate-map.md  gjc-dogfood-skill-template.md  gjc-session-clawhip-routing.md  gui-tui-parity-masterplan-brief.md  gui-tui-parity-masterplan.md  gui-tui-parity-matrix.md  hermes-mcp-bridge.md  hotspot-map-successor.md  keybindings.md  lsp-config.md  models.md  multi-vendor-profiles.md  native-ffi-optimization-policy.md  natives-addon-loader-runtime.md  natives-architecture.md  natives-binding-contract.md  notifications-sdk.md  (+19 more)
python/gjc-rpc/: pyproject.toml
python/gjc-rpc/src/gjc_rpc/: __init__.py  app_server.py  client.py  host_uris.py  protocol.py  registry.py
python/gjc-rpc/tests/: test_app_server.py  test_client.py  test_client_workflow_gate.py  test_context_and_unattended.py  test_host_uris.py  test_protocol.py  test_real_binary.py  test_registry.py  test_user_group.py  test_workflow_gate.py  test_workflow_gate_redteam.py
(+186 files in other folders)
