[package]
name = "gjc-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
dev-bun-sidecar = []
[build-dependencies]
tauri-build = { version = "2", features = [] }

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
gjc-app-server = { path = "../gjc-app-server" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { workspace = true }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
