[package]
name = "robogjc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib"]

[lints]
workspace = true

[dependencies]
hmac = "0.12"
axum = "0.7"
base64 = "0.22"
libc = "0.2"
bytes.workspace = true
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
sha1 = "0.10"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
toml.workspace = true
tokio.workspace = true
url = "2"

[dev-dependencies]
tempfile = "3.27.0"
tower = { version = "0.5", features = ["util"] }
[[bin]]
name = "robogjc"
path = "src/main.rs"
