[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gjc-rpc"
version = "0.1.0"
description = "Typed Python client for the gjc coding-agent RPC protocol"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Yeachan-Heo" }]
keywords = ["gjc", "rpc", "agent", "coding-agent", "jsonl", "stdio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.13",
]

[project.urls]
Homepage = "https://gaebal-gajae.dev/"
Repository = "https://github.com/can1357/gajae-code"
Documentation = "https://github.com/can1357/gajae-code/blob/main/docs/rpc.md"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gjc_rpc = ["py.typed"]
